update client
